[metadata]
name = cylearn
version = 0.1.3
author = Chung-Yi Chen (ADNRs)
description = A collection of tools for machine learning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ADNRs/cylearn
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
